...
    }

    func showAlert(confirmAction: @escaping () -> Void) {
        AlertService().showAlert(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            confirmButtonTitle: "Да",
            cancelButtonTitle: "Нет",
            on: self,
            confirmAction: confirmAction
        )

    }
...
            profileImageView.topAnchor.constraint(equalTo: view.topAnchor, constant: 76),
            profileImageView.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 16)
        ])
    }

    private func setupExitButton() {
        exitButton.accessibilityIdentifier = "logout button"
        exitButton.setupButton(imageName: "exit_button", parent: view, action: #selector(exitButtonTapped), constraints: [
            exitButton.widthAnchor.constraint(equalToConstant: 44),
            exitButton.heightAnchor.constraint(equalToConstant: 44),
            exitButton.centerYAnchor.constraint(equalTo: profileImageView.centerYAnchor),
            exitButton.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -16)
        ])
...
