...

    // MARK: - Properties
    private var animationLayers = Set<CALayer>()

    // MARK: - Configuration
    func configure(with url: URL, photoDate: Date?) {
        likeButton.accessibilityIdentifier = "like button"
        configureDateGradientBackground()
        configureImagePlaceholder()
        loadImage(from: url)
        setDateLabel(photoDate)
    }

...
